[project]
name = "maturity_minimal_example"
version = "0.1.0"
authors = ["Ahmed Sagdati"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { git = "https://github.com/FuelLabs/fuels-rs", rev = "b6ac4d27b31cfeaafcce763947d5575d231bc8a6", features = ['fuel-core-lib'] }
fuels-abigen-macro = { git = "https://github.com/FuelLabs/fuels-rs", rev = "b6ac4d27b31cfeaafcce763947d5575d231bc8a6" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[dev-dependencies]
anyhow = "1.0.58"

[patch.crates-io]
fuel-vm = { git = "https://github.com/FuelLabs/fuel-vm", rev = "6d6fe76f45bfd33348930e04cd75ac9741b46d11"}


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
